# ex-web-api-rust

./: Cargo.toml  README.md
public/: index.html
src/: main.rs
