[package]
name = "ex-web-api-rust"
version = "0.1.0"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "An example web api in Rust and Rocket."
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/ex-web-api-rust"
repository = "https://github.com/resolvingarchitecture/ex-web-api-rust.git"
publish = true
readme = "README.md"
keywords = ["web","web-app","rocket"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve","json"]
